# civ7-mods-hub

./: .gitignore  Cargo.toml  LICENSE  Procfile  README.md  crowdin.yml  docker-compose.yaml  package-lock.json  package.json
.github/workflows/: deploy-api.yml  publish.yml  release.yml
apps/api/: package.json  tsconfig.json
apps/api/public/: main.css
apps/api/src/: index.ts  worker.ts
apps/api/src/core/: async.ts  pocketbase.ts
apps/api/src/download/: downloadLinks.ts  github.ts
apps/api/src/middlewares/: logResponseTime.ts
apps/api/src/scripts/: fix-cf-ids.ts  hash-folder.ts  (+3 more)
apps/api/views/: error.handlebars  index.handlebars  install.handlebars  modders.handlebars  privacy.handlebars  profile.handlebars  release.handlebars
apps/backend/: Dockerfile
apps/backend/pb_hooks/: version_log.pb.js
apps/backend/pb_migrations/: 1741653899_created_mods.js  1741654074_created_mod_versions.js  1741654318_updated_mods.js  1741654326_updated_mod_versions.js  1741659868_updated_mods.js  1741659951_updated_mods.js  1741663217_updated_mods.js  1741722754_updated_mod_versions.js  1741722779_updated_mods.js  1741825021_updated_mod_versions.js  1741825789_updated_mod_versions.js  1741828735_updated_mod_versions.js  1741833097_updated_mod_versions.js  1741833129_updated_mods.js  1741833561_updated_mods.js  1741837235_created_scheduled_tasks.js  1741839626_updated_scheduled_tasks.js  1741982024_updated_mod_versions.js  1742256430_updated_mod_versions.js  1742257677_updated_mods.js  1742753877_updated_mods.js  1743032684_created_mod_versions_metadata.js  1743032895_updated_mod_versions.js  1743033084_updated_mod_versions_metadata.js  1743035562_updated_mod_versions_metadata.js  1743220191_updated_mods.js  1743257149_updated_mod_versions_metadata.js  1743257956_updated_mod_versions_metadata.js  1743331104_updated_mod_versions.js  1743332266_updated_mod_versions.js
apps/desktop/: README.md  index.html  lingui.config.js  package.json  vite.config.ts
apps/desktop/src/: App.tsx  general.d.ts  main.css  main.tsx  pocketbase-types.ts
apps/desktop/src-tauri/: 2  Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json  desktop.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: lib.rs  main.rs
apps/desktop/src-tauri/src/executable/: installation.rs  launcher.rs  mod.rs
apps/desktop/src-tauri/src/logger/: mod.rs
apps/desktop/src-tauri/src/mods/: backup.rs  extract_archive.rs  get_civ_mods_folder.rs  mod.rs  patch_modinfo.rs  profiles.rs  traversal.rs
(+107 files in other folders)
