[package]
name = "civmods"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "civmods_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-fs = "2"
dirs = "5.0"
zip = "2"
sevenz-rust = "0.6.1"
unrar = "0.5.8"
tokio = { version = "1", features = ["full"] } # Required for async handling
tauri-plugin-http = "2"
sha2 = "0.10"
walkdir = "2"
quick-xml = { version = "0.37.2", features = ["serialize"] } # XML parsing
fs_extra = "1.3.0"
tauri-plugin-shell = "2"
